--- a/delivery.html
+++ b/delivery.html
@@ -204,10 +204,10 @@ function renderOrders(list){
      : ""
    }
 
-   ${o.status==="picked_up"
-     ? `<button class="btn done" onclick="deliverFlow('${o._id}','${o.status}')">Delivered</button>`
-     : ""
-  }
+   ${(o.status==="picked_up" || o.status==="delivery_code_generated")
+ ? `<button class="btn done" onclick="deliverFlow('${o._id}','${o.status}')">Delivered</button>`
+ : ""
+}
   </div>
  </div>
  `).join("");
